# TrimGalore

./: .dockerignore  .gitattributes  .gitignore  .travis.yml  .zenodo.json  CHANGELOG.md  CITATION.cff  CLAUDE.md  Cargo.toml  Changelog.md  Dockerfile  README.md  RELEASE_NOTES.txt  build.rs  justfile  trim_galore
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml
Docs/: Trim_Galore_User_Guide.md
Docs/Images/: Thumbs.db
docs/: .gitignore  README.md  SUMMARY.md  Trim_Galore_User_Guide.md  astro.config.mjs  package-lock.json  package.json
docs/perf_data/buckberry-2026-04-29/: README.md  byte_identity_summary.txt  memory_summary.txt  perl-0.6.11_c1.json  perl-0.6.11_c1.md  perl-0.6.11_c16.json  perl-0.6.11_c16.md  perl-0.6.11_c4.json  perl-0.6.11_c4.md  perl-0.6.11_c8.json  perl-0.6.11_c8.md  rust-beta5_c1.json  rust-beta5_c1.md  rust-beta5_c10.json  rust-beta5_c10.md  rust-beta5_c12.json  rust-beta5_c12.md  rust-beta5_c14.json  rust-beta5_c14.md  rust-beta5_c16.json  rust-beta5_c16.md  rust-beta5_c24.json  rust-beta5_c24.md  rust-beta5_c4.json  rust-beta5_c4.md  rust-beta5_c8.json  rust-beta5_c8.md  rust-beta7_c1.json  rust-beta7_c1.md  rust-beta7_c10.json  rust-beta7_c10.md  rust-beta7_c12.json  rust-beta7_c12.md  rust-beta7_c14.json  rust-beta7_c14.md  rust-beta7_c16.json  rust-beta7_c16.md  rust-beta7_c24.json  rust-beta7_c24.md  rust-beta7_c4.json  (+3 more)
docs/perf_data/buckberry-2026-04-30-laptop/: README.md  rust-beta7_c1.json  rust-beta7_c1.md  rust-beta7_c2.json  rust-beta7_c2.md  rust-beta7_c4.json  rust-beta7_c4.md  rust-beta7_c6.json  rust-beta7_c6.md
docs/perf_data/clumpify-buckberry-2026-05-07/: README.md  summary.csv
docs/perf_data/clumpify-rrbs-2026-05-07/: README.md  summary.csv
docs/public/: CNAME
docs/public/logos/: preview.html
docs/scripts/: generate-benchmark-charts.py  generate-png-logos.mjs
docs/src/components/: Head.astro  Header.astro  Hero.astro  SiteTitle.astro
docs/src/content/docs/: index.mdx  install.md  quickstart.md
docs/src/content/docs/guide/: adapters.md  flags.md  length.md  outputs.md  overview.md  paired-end.md  quality.md  reports.md
docs/src/content/docs/modes/: clock.md  demux.md  hardtrim.md  implicon.md  passthrough.md  poly.md  rrbs.md
docs/src/content/docs/performance/: benchmarks.md  clumpy.md  threading.md
docs/src/content/docs/reference/: changelog.md  credits.md  logo.md  migration.md
docs/src/content/docs/rrbs/: directional.md  guide.md  non-directional.md  qc.md
docs/src/pages/og/: [...route].ts
docs/src/styles/: custom.css
legacy/: trim_galore
optimus_prime/: Cargo.toml  SUMMARY.md
optimus_prime/src/: adapter.rs  alignment.rs  cli.rs  fastq.rs  io.rs  lib.rs  main.rs  parallel.rs  quality.rs  report.rs  trimmer.rs
plans/: .gitignore
plans/06062026_passthrough-mode/: CODE_REVIEW_A.md  CODE_REVIEW_B.md  COVERAGE.md  PLAN.md  PLAN_REVIEW_A.md  PLAN_REVIEW_B.md  PROGRESS.md
plans/06252026_pluggable-io-formats/: EPIC.md
plans/06252026_pluggable-io-formats/phase1-trimgalore-formats/: CODE_REVIEW_reviewer-A.md  CODE_REVIEW_reviewer-B.md  CODE_REVIEW_round2_reviewer-A.md  CODE_REVIEW_round2_reviewer-B.md  PLAN.md  PLAN_REVIEW_A.md  PLAN_REVIEW_B.md  PLAN_REVIEW_C.md  PLAN_REVIEW_D.md
plans/06252026_ubam-input-support/: .gitignore  CODE_REVIEW_A.md  CODE_REVIEW_B.md  COVERAGE.md  IMPL.md  PLAN.md  PLAN_REVIEW_A.md  PLAN_REVIEW_B.md  PROGRESS.md
plans/06252026_ubam-input-support/spikes/: SPIKE_paired_ordering.md  SPIKE_recordsource.md
plans/06252026_ubam-input-support/spikes/spike1-recordsource/: Cargo.toml
plans/06252026_ubam-input-support/spikes/spike1-recordsource/src/: main.rs
plans/06252026_ubam-input-support/spikes/spike2-paired-ordering/: build_test_bams.sh  deinterleave_sketch.rs  grouped.bam  grouped_sortN_ASCII.bam  grouped_sorted_n.bam  input.bam  input.sam  natural.bam  natural_n.bam  sorted_n.bam  supp.bam  supp_sorted_n.bam  unsorted.bam  unsorted.sam
plans/poly-g-trimming/: CODE_REVIEW_A.md  CODE_REVIEW_B.md  COVERAGE.md  plan.md  review_reviewer-A.md  review_reviewer-B.md
scripts/: benchmark.sh
src/: adapter.rs  alignment.rs  bam.rs  cli.rs  clump.rs  demux.rs  fastq.rs  fastqc.rs  filters.rs  format.rs  io.rs  lib.rs  main.rs  parallel.rs  quality.rs  report.rs  specialty.rs  spill.rs  trimmer.rs
test_files/: README.md  colorspace_file.fastq  demux_test_samplesheet.txt  illumina_100K.fastq.gz_trimming_report.txt  illumina_10K.fastq.gz_trimming_report.txt  multi_adapters.fa  nextera_100K.fastq.gz_trimming_report.txt  smallRNA_100K.fastq.gz_trimming_report.txt  smallRNA_100K_R1.fastq.gz_trimming_report.txt  smallRNA_100K_R2.fastq.gz_trimming_report.txt  ubam_out_pe_REFERENCE.bam  ubam_out_se_REFERENCE.bam  ubam_paired_test.bam  ubam_paired_test_val_2_REFERENCE.fq  ubam_test.bam  ubam_test_trimmed_REFERENCE.fq  ubam_test_with_tags.bam  ubam_test_with_tags_trimmed_REFERENCE.fq
tests/: integration_passthrough.rs  integration_ubam.rs  integration_ubam_out.rs
