[package]
name = "trim-galore"
version = "2.1.0-beta.3"
edition = "2024"
rust-version = "1.88"
description = "Fast adapter and quality trimming for NGS data — Oxidized Edition"
license = "GPL-3.0-only"
authors = ["Felix Krueger"]
repository = "https://github.com/FelixKrueger/TrimGalore"
homepage = "https://github.com/FelixKrueger/TrimGalore"
keywords = ["bioinformatics", "ngs", "adapter-trimming", "fastq", "quality-trimming"]
categories = ["command-line-utilities", "science"]
readme = "README.md"
exclude = [
    "test_files/",
    "plans/",
    "docs/",
    "optimus_prime/",
    ".github/",
    ".claude/",
    "CLAUDE.md",
    "CHANGELOG.md",
]

[[bin]]
name = "trim_galore"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
flate2 = { version = "1.1", default-features = false, features = ["zlib-rs"] }
gzp = { version = "2", default-features = false, features = ["deflate_rust"] }
anyhow = "1"
memchr = "2"
log = "0.4"
env_logger = "0.11"
# Bundled FastQC integration. Exact-pin: brand-new crate (v1.0.0 published
# 2026-04-26) — treat upstream bumps as deliberate-test events. See
# /Users/fkrueger/.claude/plans/bundled-fastqc-rust.md for the design notes.
fastqc-rust = "=1.0.0"

[dev-dependencies]
serde_json = "1"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "debuginfo"
