[package]
name = "trim-galore"
version = "2.2.0"
edition = "2024"
rust-version = "1.88"
description = "Fast adapter and quality trimming for NGS data"
license = "GPL-3.0-only"
authors = ["Felix Krueger"]
repository = "https://github.com/FelixKrueger/TrimGalore"
homepage = "https://github.com/FelixKrueger/TrimGalore"
keywords = ["bioinformatics", "ngs", "adapter-trimming", "fastq", "quality-trimming"]
categories = ["command-line-utilities", "science"]
readme = "README.md"
exclude = [
    "test_files/",
    "plans/",
    "docs/",
    ".github/",
    ".claude/",
    "CLAUDE.md",
    "CHANGELOG.md",
]

[[bin]]
name = "trim_galore"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
flate2 = { version = "1.1", default-features = false, features = ["zlib-rs"] }
gzp = { version = "2", default-features = false, features = ["deflate_rust"] }
anyhow = "1"
memchr = "2"
log = "0.4"
env_logger = "0.11"
# Bundled FastQC integration. Exact-pin: brand-new crate (v1.0.0 published
# 2026-04-26) — treat upstream bumps as deliberate-test events. See
# /Users/fkrueger/.claude/plans/bundled-fastqc-rust.md for the design notes.
# v1.0.1 (2026-04-26) fixes percentage-precision in >>Overrepresented sequences
# (ewels/FastQC-Rust#2); restored byte-identity to Java FastQC 0.12.1 for that
# section.
fastqc-rust = "=1.0.1"
# uBAM input support (#316). Exact-pinned to the version already pulled
# transitively via fastqc-rust 1.0.1 — using the `noodles` umbrella crate with
# features=["bam"] reuses that tree rather than forcing a parallel-version
# compile. Treat upstream bumps as deliberate-test events.
# See plans/06252026_ubam-input-support/PLAN.md §5 step 1.
noodles = { version = "=0.88.0", default-features = false, features = ["bam"] }

[dev-dependencies]
serde_json = "1"
tempfile = "3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = "debuginfo"
