[package]
name = "optimus_prime"
version = "0.1.0"
edition = "2021"
rust-version = "1.74"
description = "A fast, single-pass NGS adapter and quality trimmer — Rust reimplementation of Trim Galore"
license = "GPL-3.0"
authors = ["Felix Krueger"]
repository = "https://github.com/FelixKrueger/TrimGalore"
homepage = "https://github.com/FelixKrueger/TrimGalore"
keywords = ["bioinformatics", "ngs", "adapter-trimming", "fastq", "quality-trimming"]
categories = ["command-line-utilities", "science"]
readme = "../README.md"

[[bin]]
name = "trim_galore"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
flate2 = { version = "1.1", default-features = false, features = ["zlib-rs"] }
gzp = { version = "2", default-features = false, features = ["deflate_rust"] }
anyhow = "1"
memchr = "2"
log = "0.4"
env_logger = "0.11"
